[package]
name = "overwatch"
version = "0.1.0"
description = ""
authors = ["shane"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/overwatch"
repository = "https://github.com/digitalsanctum/overwatch"
keywords = ["cli", "overwatch", "tools", "shell"]
categories = ["command-line-utilities", "command-line-interface", "utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
